--- a/10_Code/Titanic_Survival_Predictor.ipynb
+++ b/10_Code/Titanic_Survival_Predictor.ipynb
@@ -62,6 +62,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "from statsmodels.tools.sm_exceptions import ConvergenceWarning\n",
+    "warnings.simplefilter('ignore', ConvergenceWarning)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -70,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,13 +142,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9630ea1bc3442e69495a91509d9ff23",
+       "model_id": "1c47041c004c47e181c5ccec9f624fcf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -163,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,19 +260,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f1 = 'Survived ~ C(Sex) + C(Embarked) + Pclass + Age + SibSp + Parch + Fare' \n",
-    "f2 = 'Survived ~ C(Pclass) + C(Sex) + Age + C(SibSp) + C(Parch) + C(Ticket) + Fare + C(Cabin) + C(Embarked)'\n",
-    "f3 = 'Survived ~ Age + Pclass + Sex + Embarked + Fare + SibSp + Parch'\n",
-    "f4 = 'Survived ~ Age + Pclass + Sex + Embarked + Fare + SibSp + Parch'"
+    "f1 = 'Survived ~ Age + C(Pclass) + C(Sex) + C(Embarked) + Fare + C(SibSp) + C(Parch)'\n",
+    "f2 = 'Survived ~ Age + Pclass + Sex + Embarked + Fare + SibSp + Parch'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +279,9 @@
      "text": [
       "Optimization terminated successfully.\n",
       "         Current function value: 0.445782\n",
-      "         Iterations 6\n"
+      "         Iterations: 38\n",
+      "         Function evaluations: 44\n",
+      "         Gradient evaluations: 44\n"
      ]
     },
     {
@@ -288,10 +299,10 @@
        "  <th>Method:</th>                 <td>MLE</td>       <th>  Df Model:          </th>  <td>     7</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>            <td>Tue, 08 Mar 2022</td> <th>  Pseudo R-squ.:     </th>  <td>0.3304</td>  \n",
+       "  <th>Date:</th>            <td>Wed, 09 Mar 2022</td> <th>  Pseudo R-squ.:     </th>  <td>0.3304</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                <td>23:51:54</td>     <th>  Log-Likelihood:    </th> <td> -317.40</td> \n",
+       "  <th>Time:</th>                <td>00:19:09</td>     <th>  Log-Likelihood:    </th> <td> -317.40</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>converged:</th>             <td>True</td>       <th>  LL-Null:           </th> <td> -473.99</td> \n",
@@ -338,8 +349,8 @@
        "Dep. Variable:               Survived   No. Observations:                  712\n",
        "Model:                          Logit   Df Residuals:                      704\n",
        "Method:                           MLE   Df Model:                            7\n",
-       "Date:                Tue, 08 Mar 2022   Pseudo R-squ.:                  0.3304\n",
-       "Time:                        23:51:54   Log-Likelihood:                -317.40\n",
+       "Date:                Wed, 09 Mar 2022   Pseudo R-squ.:                  0.3304\n",
+       "Time:                        00:19:09   Log-Likelihood:                -317.40\n",
        "converged:                       True   LL-Null:                       -473.99\n",
        "Covariance Type:            nonrobust   LLR p-value:                 9.214e-64\n",
        "==============================================================================\n",
@@ -357,61 +368,14 @@
        "\"\"\""
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "logit_model = smf.logit(formula = str(f4), data = train_df).fit()\n",
+    "logit_model = smf.logit(formula = str(f2), data = train_df).fit(method='bfgs', maxiter=100)\n",
     "logit_model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Coefficeients\n",
-      "Intercept    5.019745\n",
-      "Age         -0.044092\n",
-      "Pclass      -1.087319\n",
-      "Sex         -2.689738\n",
-      "Embarked     0.257272\n",
-      "Fare         0.001250\n",
-      "SibSp       -0.375849\n",
-      "Parch       -0.052702\n",
-      "dtype: float64\n",
-      "\n",
-      "p-Values\n",
-      "Intercept    2.485918e-17\n",
-      "Age          5.369645e-07\n",
-      "Pclass       3.409250e-12\n",
-      "Sex          9.986018e-34\n",
-      "Embarked     1.006696e-01\n",
-      "Fare         6.021579e-01\n",
-      "SibSp        2.463998e-03\n",
-      "Parch        6.884057e-01\n",
-      "dtype: float64\n",
-      "\n",
-      "Dependent variables\n",
-      "Survived\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Coefficeients\")\n",
-    "print(logit_model.params)\n",
-    "print()\n",
-    "print(\"p-Values\")\n",
-    "print(logit_model.pvalues)\n",
-    "print()\n",
-    "print(\"Dependent variables\")\n",
-    "print(logit_model.model.endog_names)"
    ]
   },
   {
@@ -423,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,13 +458,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b9503c891404fd4af557e90e8a06ffa",
+       "model_id": "e7798b7cbe7d44ca93879d76cea59ab3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -514,7 +478,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b4cf0ca898c4742be0d6d875e16c70e",
+       "model_id": "24c944f9f7464d1984d13e826244a323",
        "version_major": 2,
        "version_minor": 0
       },
@@ -532,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
